--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "zfcampus/zf-apigility-doctrine": "^2.1",
         "zfcampus/zf-rest": "^1.3",
-        "doctrine/doctrine-orm-module"
+        "doctrine/doctrine-orm-module": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2"
