--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,21 @@
     "description": "QueryProviders in Doctrine Repositories",
     "type": "library",
     "require": {
+        "api-skeletons/zf-doctrine-repository": "^1.0",
         "zfcampus/zf-apigility-doctrine": "^2.1",
         "zfcampus/zf-rest": "^1.3",
         "doctrine/doctrine-orm-module": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.2"
+        "squizlabs/php_codesniffer": "^2.7 || ^3.0",
+        "phpunit/phpunit": "^5.6",
+        "zendframework/zend-coding-standard": "~1.0.0",
+        "zendframework/zend-i18n": "^2.7.3",
+        "zendframework/zend-log": "^2.9.1",
+        "zendframework/zend-serializer": "^2.8",
+        "zendframework/zend-test": "^2.6.1 || ^3.0.1",
+        "zfcampus/zf-apigility-provider": "^1.2",
+        "api-skeletons/zf-oauth2-doctrine": "*"
     },
     "license": "MIT",
     "authors": [
