Don't use shared plugin manager

--- a/config/zf-doctrine-repository-query-provider.global.php.dist
+++ b/config/zf-doctrine-repository-query-provider.global.php.dist
@@ -2,10 +2,7 @@
 
 return [
     'zf-doctrine-repository-query-provider' => [
-#        'Db\Entity\User' => [
-#            'query_provider' => 'DbApi\Query\Provider\UserQueryProvider',
-#            'object_manager' => 'doctrine.entitymanager.orm_default',
-#        ],
+#        'Db\Entity\User' => 'DbApi\Query\Provider\UserQueryProvider',
     ],
 ];
 
